--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ricardo Rodriguez
 description: Ing. Topografico, Magister en GIS, Blog y portafolio profesional en temas de Data Science y GIS
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/70866489?v=4
 
 #
 # Flags below are optional
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: https://github.com/risharky
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/ricardo-rodr%C3%ADguez-otero-2709161b/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
