--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/risharky
+  github: risharky
   instagram:
-  linkedin: https://www.linkedin.com/in/ricardo-rodr%C3%ADguez-otero-2709161b/
+  linkedin: ricardo-rodr%C3%ADguez-otero-2709161b/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
